--- a/init.ipynb
+++ b/init.ipynb
@@ -2,78 +2,129 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from monotonenorm import GroupSort, get_normed_weights\n",
-    "from torch.nn.utils.parametrizations import orthogonal"
+    "from torch.nn.utils.parametrizations import orthogonal\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_dim = 16\n",
-    "hidden_dim = 16\n",
-    "depth = 4\n",
-    "lip = 5\n",
-    "#activation = lambda: torch.nn.ReLU()\n",
-    "activation = lambda: GroupSort(hidden_dim//2)\n",
-    "#from monotonenorm import direct_norm\n",
-    "direct_norm = lambda x, *args, **kwargs: x  # make it a normal network\n",
-    "\n",
-    "input = torch.randn(1000, input_dim)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 320,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layers = [\n",
-    "  torch.nn.Identity(),\n",
-    "  direct_norm(torch.nn.Linear(input_dim,hidden_dim), kind=\"one\", alpha=lip ** ( 1 / depth)),\n",
-    "  activation()\n",
-    "]\n",
-    "for i in range(depth - 2):\n",
-    "  layers.append(\n",
-    "    direct_norm(torch.nn.Linear(hidden_dim,hidden_dim), kind=\"one\", alpha=lip ** ( 1 / depth))\n",
-    "  )\n",
-    "  layers.append(activation())\n",
-    "layers.append(\n",
-    "  direct_norm(torch.nn.Linear(hidden_dim,1), kind=\"one\", alpha=lip ** ( 1 / depth))\n",
-    ")\n",
-    "model = torch.nn.Sequential(*layers).requires_grad_(False)\n",
-    "\n",
-    "\n",
-    "for i in model.modules():\n",
-    "  if isinstance(i, torch.nn.Linear):\n",
-    "    torch.nn.init.orthogonal_(i.weight)\n",
-    "    #i.weight.data *= input_dim ** (.5 / depth)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0, Identity()                                                   std 1.0037, mean 0.0125\n",
-      "1, Linear(in_features=16, out_features=16, bias=True)           std 1.0036, mean -0.0849\n",
-      "2, GroupSort(num_groups: {self.n_groups})                       std 0.8303, mean -0.0849\n",
-      "3, Linear(in_features=16, out_features=16, bias=True)           std 0.8275, mean -0.0705\n",
-      "4, GroupSort(num_groups: {self.n_groups})                       std 0.7199, mean -0.0705\n",
-      "5, Linear(in_features=16, out_features=16, bias=True)           std 0.7196, mean -0.1614\n",
-      "6, GroupSort(num_groups: {self.n_groups})                       std 0.6303, mean -0.1614\n",
-      "7, Linear(in_features=16, out_features=1, bias=True)            std 0.5381, mean 0.0939\n"
+      "mean norm1: 0.2907, mean norminf: 25.4665, mean norm20: 0.1470, mean norm21: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "dims = (5, 1000)\n",
+    "norminfs, norm1s, norm20s, norm21s = [], [], [], []\n",
+    "for i in range(100):\n",
+    "  torch.manual_seed(i)\n",
+    "  t = torch.randn(*dims)\n",
+    "  torch.nn.init.orthogonal_(t)\n",
+    "  norm1s.append(t.norm(dim=0, p=1).max().item())\n",
+    "  norminfs.append(t.norm(dim=1, p=1).max().item())\n",
+    "  norm20s.append(t.norm(dim=0, p=2).max().item())\n",
+    "  norm21s.append(t.norm(dim=1, p=2).max().item())\n",
+    "  \n",
+    "print(f\"mean norm1: {np.mean(norm1s):.4f}, mean norminf: {np.mean(norminfs):.4f}, mean norm20: {np.mean(norm20s):.4f}, mean norm21: {np.mean(norm21s):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Lambda(torch.nn.Module):\n",
+    "    def __init__(self, f):\n",
+    "        super().__init__()\n",
+    "        self.f = f\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.f(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dim = 256\n",
+    "hidden_dim = 16\n",
+    "depth = 4\n",
+    "per_layer_lip = hidden_dim**.5\n",
+    "#activation = lambda: torch.nn.ReLU()\n",
+    "activation = lambda: GroupSort(hidden_dim // 2)\n",
+    "from monotonenorm import direct_norm\n",
+    "#direct_norm = lambda x, *args, **kwargs: x  # make it a normal network\n",
+    "\n",
+    "input = torch.randn(1000, input_dim)\n",
+    "lip = per_layer_lip**depth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layers = [\n",
+    "  torch.nn.Identity(),\n",
+    "  direct_norm(torch.nn.Linear(input_dim,hidden_dim), kind=\"one-inf\", alpha=per_layer_lip),\n",
+    "  activation()\n",
+    "]\n",
+    "for i in range(depth - 2):\n",
+    "  layers.append(\n",
+    "    direct_norm(torch.nn.Linear(hidden_dim,hidden_dim), kind=\"inf\", alpha=per_layer_lip)\n",
+    "  )\n",
+    "  layers.append(activation())\n",
+    "layers.append(\n",
+    "  direct_norm(torch.nn.Linear(hidden_dim,1), kind=\"inf\", alpha=per_layer_lip)\n",
+    ")\n",
+    "layers.append(\n",
+    "  Lambda(lambda x: x/lip)\n",
+    ")\n",
+    "model = torch.nn.Sequential(*layers).requires_grad_(False)\n",
+    "\n",
+    "\n",
+    "for i in model.modules():\n",
+    "  if isinstance(i, torch.nn.Linear):\n",
+    "    #continue\n",
+    "    torch.nn.init.orthogonal_(i.weight)\n",
+    "    #i.weight.data *= input_dim ** (.5 / depth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0, Identity()                                                   std 0.9993, mean -0.0030\n",
+      "1, Linear(in_features=256, out_features=16, bias=True)          std 1.0077, mean -0.0224\n",
+      "2, GroupSort(num_groups: {self.n_groups})                       std 0.8351, mean -0.0224\n",
+      "3, Linear(in_features=16, out_features=16, bias=True)           std 0.8329, mean -0.2274\n",
+      "4, GroupSort(num_groups: {self.n_groups})                       std 0.7247, mean -0.2274\n",
+      "5, Linear(in_features=16, out_features=16, bias=True)           std 0.7246, mean 0.2984\n",
+      "6, GroupSort(num_groups: {self.n_groups})                       std 0.6585, mean 0.2984\n",
+      "7, Linear(in_features=16, out_features=1, bias=True)            std 0.6490, mean 0.2821\n",
+      "8, Lambda()                                                     std 0.0025, mean 0.0011\n"
      ]
     }
    ],
@@ -83,157 +134,76 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 158,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "want: f(x) ~ P(0,1)\n",
-    "g(x) ~ P(0,1) ?\n",
+    "# monotonic network with reasonable size starting configuration\n",
     "\n",
-    "want:\n",
-    "f(x) = 1/idim(g(x) + 1x) ~ P(0,1), x_i ~ P(0,1) --> sum(x_i) ~ P(0,i_dim)\n",
-    "g(x) ~ P(0,.5), 1x ~ P(0,.5)"
+    "input_dim = 256\n",
+    "hidden_dim = 16\n",
+    "depth = 4\n",
+    "per_layer_lip = hidden_dim**.5\n",
+    "activation = lambda: GroupSort(hidden_dim // 2)\n",
+    "from monotonenorm import direct_norm\n",
+    "#direct_norm = lambda x, *args, **kwargs: x  # make it a normal network\n",
+    "\n",
+    "input = torch.randn(1000, input_dim)\n",
+    "lip = per_layer_lip**depth\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Model(torch.nn.Module):\n",
+    "  def __init__(self):\n",
+    "    super().__init__()\n",
+    "    layers = [\n",
+    "      direct_norm(torch.nn.Linear(input_dim,hidden_dim), kind=\"one-inf\"),\n",
+    "      activation()\n",
+    "    ]\n",
+    "    for i in range(depth - 2):\n",
+    "      layers.append(\n",
+    "        direct_norm(torch.nn.Linear(hidden_dim,hidden_dim), kind=\"inf\")\n",
+    "      )\n",
+    "      layers.append(activation())\n",
+    "    layers.append(\n",
+    "      direct_norm(torch.nn.Linear(hidden_dim,1), kind=\"inf\")\n",
+    "    )\n",
+    "    self.layers = torch.nn.ModuleList(layers)\n",
+    "\n",
+    "  def forward(self, x):\n",
+    "    for i in self.layers:\n",
+    "      y = i(y)\n",
+    "    return y + x.sum(1, keepdim=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 728,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_norm = lambda x: get_normed_weights(x, kind=\"one\", alpha=1, always_norm=False, vectorwise=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 729,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#torch.manual_seed(1)\n",
-    "i = torch.randn(100, 2)\n",
-    "t = torch.randn(2,2)\n",
-    "torch.nn.init.orthogonal_(t)\n",
-    "o = i @ do_norm(t).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 730,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor(0.8168), tensor(1.1281))"
-      ]
-     },
-     "execution_count": 730,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "o.var(0).mean(), i.var(0).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 731,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[ 0.1942, -0.9810],\n",
-       "         [-0.9810, -0.1942]]),\n",
-       " tensor([[ 0.1653, -0.8347],\n",
-       "         [-0.8347, -0.1653]]))"
-      ]
-     },
-     "execution_count": 731,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t, do_norm(t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 733,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1.0000, 1.0000]) tensor([1.0000, 1.0000])\n",
-      "tensor([1.0000, 1.0000]) tensor([1.0000, 1.0000])\n"
+      "Model(\n",
+      "  (layers): ModuleList(\n",
+      "    (0): Linear(in_features=256, out_features=16, bias=True)\n",
+      "    (1): GroupSort(num_groups: {self.n_groups})\n",
+      "    (2): Linear(in_features=16, out_features=16, bias=True)\n",
+      "    (3): GroupSort(num_groups: {self.n_groups})\n",
+      "    (4): Linear(in_features=16, out_features=16, bias=True)\n",
+      "    (5): GroupSort(num_groups: {self.n_groups})\n",
+      "    (6): Linear(in_features=16, out_features=1, bias=True)\n",
+      "  )\n",
+      ")\n"
      ]
     }
    ],
    "source": [
-    "p = 1#float('inf')\n",
-    "print(do_norm(t).norm(dim=0, p=p), do_norm(t).norm(dim=1, p=p))\n",
-    "print(t.norm(dim=0, p=2), t.norm(dim=1, p=2))\n"
+    "model = Model()\n",
+    "print(model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 738,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#householder reflection\n",
-    "def householder_reflection(v):\n",
-    "  return torch.eye(v.shape[0]) - 2 * v @ v.T / (v.T @ v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 740,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hh = householder_reflection(torch.tensor([1., 0.]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 741,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v = torch.tensor([1., 0.])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 743,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([-1., -2.])"
-      ]
-     },
-     "execution_count": 743,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "v @ hh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
